// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreatePipelineButton tests when isGitSimplificationEnabled NOT enabled RbacButton should be rendered 1`] = `
<div>
  <div
    class="Button--withDocsTooltip"
    data-tooltip-id="addPipeline"
  >
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-primary"
      data-testid="add-pipeline"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
        icon="plus"
      >
        <svg
          data-icon="plus"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            plus
          </desc>
          <path
            d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp3-button-text"
      >
        common.createPipeline
      </span>
    </button>
  </div>
</div>
`;

exports[`CreatePipelineButton tests when isGitSimplificationEnabled, NG_GIT_EXPERIENCE_IMPORT_FLOW are enabled SplitButton should be rendered 1`] = `
<div>
  <div
    class="SplitButton--splitButton"
  >
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main SplitButton--main border-right-0 Button--with-current-color Button--withLeftIcon Button--variation Button--variation-primary"
      data-testid="add-pipeline"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
        icon="plus"
      >
        <svg
          data-icon="plus"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            plus
          </desc>
          <path
            d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp3-button-text"
      >
        common.createPipeline
      </span>
    </button>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main SplitButton--dropdown border-left-0 Button--with-current-color Button--iconOnly Button--withRightIcon Button--variation Button--variation-primary"
          data-testid="add-pipeline"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-chevron-down StyledProps--main"
            icon="chevron-down"
          >
            <svg
              data-icon="chevron-down"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                chevron-down
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;
